agregado controlador, autenticacion y documentación de openapi
